Update Compiler plugin in pom.xml